src/objects/Mission_Assignment__c.object
<CustomObject>
    <description>Junction object linking Mission__c and Superhero__c</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean flag to indicate whether a mission is active or not.</description>
        <inlineHelpText>Boolean flag to indicate whether a mission is active or not.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related mission</description>
        <inlineHelpText>Related mission</inlineHelpText>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Mission Assignments</relationshipLabel>
        <relationshipName>Mission_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Superhero__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related superhero</description>
        <inlineHelpText>Related superhero</inlineHelpText>
        <label>Superhero</label>
        <referenceTo>Superhero__c</referenceTo>
        <relationshipLabel>Mission Assignments</relationshipLabel>
        <relationshipName>Mission_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Mission Assignment</label>
    <nameField>
        <displayFormat>MA-{00000}</displayFormat>
        <label>Mission Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mission Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>